front-end/k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: staging
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-deployment
          image: gcr.io/fleet-geode-253715/frontend:1.2
          readinessProbe:
            httpGet:
              path: /ping
              port: 8082
          ports:
            - containerPort: 8082
