front-end/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: staging
spec:
  backend:
    serviceName: frontend-services
    servicePort: 8082
